k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tempo-distributor
  namespace: observability
  labels:
    app: tempo-distributor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tempo-distributor
  template:
    metadata:
      labels:
        app: tempo-distributor
    spec:
      containers:
        - name: tempo
          image: grafana/tempo:2.8.1
          args:
            - "-target=distributor"
            - "-config.file=/etc/tempo.yaml"
          ports:
            - containerPort: 4318
          volumeMounts:
            - name: tempo-config
              mountPath: /etc/tempo.yaml
              subPath: tempo.yaml
      volumes:
        - name: tempo-config
          configMap:
            name: tempo-config
